--- a/app/src/main/res/layout/activity_Add_Instrument.xml
+++ b/app/src/main/res/layout/activity_Add_Instrument.xml
@@ -8,60 +8,75 @@
     android:backgroundTint="#BFF4DC"
     tools:context="AddInstrument">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="125dp"
-        android:layout_height="67dp"
-        android:backgroundTint="#0A5841"
-        android:text="Add"
-        android:textColor="#FFFFFF"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="517dp"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="220dp"
-        android:layout_height="52dp"
-        android:ems="10"
-        android:hint="Instrument's name"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="128dp"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="192dp"
-        android:layout_height="48dp"
-        android:ems="10"
-        android:hint="Describtion"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="109dp"
-        tools:layout_editor_absoluteY="195dp"
-        tools:ignore="MissingConstraints" />
-
     <TextView
         android:id="@+id/textView"
-        android:layout_width="199dp"
-        android:layout_height="24dp"
+        android:layout_width="200dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
         android:background="#940A5841"
         android:foregroundTint="#039BE5"
         android:text="Add a mp3 file for DO note here"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
-        tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="310dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="125dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="147dp"
+        android:backgroundTint="#0A5841"
+        android:text="Add"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="220dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginBottom="15dp"
+        android:ems="10"
+        android:hint="Instrument's name"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="192dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="29dp"
+        android:ems="10"
+        android:hint="Describtion"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
         tools:ignore="MissingConstraints" />
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="182dp"
-        android:layout_height="170dp"
+        android:layout_width="218dp"
+        android:layout_height="143dp"
         android:backgroundTint="#00FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/ic_baseline_music_video_24"
-        tools:layout_editor_absoluteX="114dp"
-        tools:layout_editor_absoluteY="334dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
